fix(ui): handle overflowing latest papers

--- a/static/form.css
+++ b/static/form.css
@@ -119,6 +119,7 @@
     z-index: -1;
     margin-top: 20px;
     min-height: 40px;
+    flex-wrap: wrap;
 }
 
 .recent-paper {
